# ros2_descriptions

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  rviz2.rviz  spot.yaml  ur5.yaml
description/: spot.urdf.xacro  spot_leg.urdf.xacro  ur5.urdf.xacro
description/gazebo/: ur5.gazebo.xacro
description/ros2_control/: spot.ros2_control.xacro  spot_leg.ros2_control.xacro  ur5.ros2_control.xacro
description/urdf/: spot.description.urdf.xacro  spot_leg.description.urdf.xacro  ur5.description.urdf.xacro  ur5.urdf.xacro
launch/: view_robot.launch.py
